-------------
Version 0.6.1
-------------

COCKPIT
- Added support for copying or moving objects within and between buckets.
- Added support for updating objects with new metadata values.
- Fixed issue where downloading items to a directory containing many files and 
  directories (eg 250K+) would cause Cockpit to fail with OutOfMemory errors.
  

SYNCHRONIZE
- Synchonize now recognizes when you have specified a partial S3 paths when 
  synchronizing DOWN. A partial path is one that does not exactly match a
  directory path. Partial paths can now act as a prefix test that identifies
  objects in an S3 path, where only the objects in S3 that match the prefix are
  downloaded. For example, in a bucket that has a Docs subdirectory containing
  objects named with a timestamp prefix, the S3 path "my-bucket/Docs/2008" will 
  identify the objects in the Docs subdirectory with names beginning with 2008.
- Added --batch option that causes Synchronize to compare and download/upload 
  files in batches of 1000, rather than all at once. This option will reduce the 
  memory required to synchronize buckets with many objects, and will allow file
  transfers to commence as soon as possible rather than after the slow
  comparison process.
- Added --skipmetadata option that causes Synchronize to skip the retrieval of 
  object metadata information from S3. This makes synchs much faster for large 
  buckets, but leave the app with less info to make decisions.
- Added --reportlevel option that allows the user to control how much report
  detail is printed, from 0 (no reporting) to 3 (all reporting).
- Added --move option that deletes local files after they have been uploaded to
  S3, or deletes objects from S3 after they have been downloaded.
- Property settings in the synchronize.properties file, or in the file referred
  to by the --properties option, will override properties of the same name in
  jets3t.properties. This makes it easy to create task-specific properties
  files.

